Changed uuid for id on user and table identifiers on APIs
